--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Add_Journal">
+        <activity android:name=".NavActivity"></activity>
+        <activity android:name=".SettingsPage" />
+        <activity android:name=".GoalsPage" />
+        <activity android:name=".JournalsPage" />
+        <activity android:name=".Home" />
+        <activity android:name=".AddJournal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
