--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NavActivity"></activity>
-        <activity android:name=".SettingsPage" />
-        <activity android:name=".GoalsPage" />
-        <activity android:name=".JournalsPage" />
-        <activity android:name=".Home" />
-        <activity android:name=".AddJournal">
+
+        <activity android:name=".NavActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".AddJournal">
+
+        </activity>
+
     </application>
 
 </manifest>
